cyclonedx-bom/tests/snapshots/1.4/it_should_parse_all_of_the_valid_xml_specifications@valid-component-swid-1.4.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_4.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.4/valid-component-swid-1.4.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.4" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="application">
      <author>Acme Super Heros</author>
      <name>Acme Application</name>
      <version>9.1.1</version>
      <swid tagId="swidgen-242eb18a-503e-ca37-393b-cf156ef09691_9.1.1" name="Acme Application" version="9.1.1" />
    </component>
  </components>
</bom>
