cyclonedx-bom/tests/snapshots/1.4/it_should_parse_all_of_the_valid_xml_specifications@valid-metadata-supplier-1.4.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_4.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.4/valid-metadata-supplier-1.4.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.4" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <metadata>
    <supplier>
      <name>Acme, Inc.</name>
      <url>https://example.com</url>
      <contact>
        <name>Acme Distribution</name>
        <email>distribution@example.com</email>
      </contact>
    </supplier>
  </metadata>
  <components />
</bom>
