cyclonedx-bom/tests/snapshots/1.4/it_should_parse_all_of_the_valid_xml_specifications@valid-patch-1.4.xml.snap
---
source: cyclonedx-bom/tests/specification_tests_v1_4.rs
expression: bom_output
input_file: cyclonedx-bom/tests/data/1.4/valid-patch-1.4.xml
---
<?xml version="1.0" encoding="utf-8"?>
<bom xmlns="http://cyclonedx.org/schema/bom/1.4" serialNumber="urn:uuid:3e671687-395b-41f5-a30f-a58921a69b79" version="1">
  <components>
    <component type="library">
      <group>com.acme</group>
      <name>sample-library</name>
      <version>1.0.0</version>
      <pedigree>
        <ancestors>
          <component type="library">
            <group>org.example</group>
            <name>sample-library</name>
            <version>1.0.0</version>
          </component>
        </ancestors>
        <patches>
          <patch type="unofficial">
            <diff>
              <text content-type="text/plain" encoding="base64">blah</text>
              <url>http://uri/to/changes.diff</url>
            </diff>
            <resolves>
              <issue type="enhancement">
                <id>JIRA-17240</id>
                <description>Great new feature that does something</description>
                <source>
                  <name>Acme Org</name>
                  <url>https://issues.acme.org/17240</url>
                </source>
              </issue>
            </resolves>
          </patch>
          <patch type="backport">
            <diff>
              <text content-type="text/plain" encoding="base64">blah</text>
              <url>http://uri/to/changes.diff</url>
            </diff>
            <resolves>
              <issue type="security">
                <id>CVE-2019-9997</id>
                <name>CVE-2019-9997</name>
                <description>blah blah</description>
                <source>
                  <name>NVD</name>
                  <url>https://nvd.nist.gov/vuln/detail/CVE-2019-9997</url>
                </source>
                <references>
                  <url>http://some/other/site-1</url>
                  <url>http://some/other/site-2</url>
                </references>
              </issue>
              <issue type="defect">
                <id>JIRA-874319</id>
                <description>Enable to do something</description>
                <source>
                  <name>Example Org</name>
                  <url>https://issues.example.org/874319</url>
                </source>
                <references>
                  <url>http://some/other/site-1</url>
                  <url>http://some/other/site-2</url>
                </references>
              </issue>
            </resolves>
          </patch>
        </patches>
      </pedigree>
    </component>
  </components>
</bom>
